src/main/java/semantic/symbolTable/test/passing/correctOverride.ru
struct A {}
struct B:A{}

impl A {
    .(){}

    fn f(Int a, Str b) -> Int {}
}

impl B {
    .(){}

    fn f(Int c, Str d) -> Int {}
}

start{}